src/golden/unittests/typeerrors/test.golden/support.fl
	card Support
		state
			String x
	